
     1. What is VBoxVmService?

     2. So why did you create it?

     3. How does it work?

     4. What are the plans for the future?

     5. Which versions of Windows are supported?

     6. Will VBoxVmService run on Mac OSX or Linux?

     7. Credits




------------------------------------------------------------------------------


0. What is new in this release?

2011-11-29 Release 3.0 "Sweet Potato"

* Force reloading INI file when VBoxVMService commands are executed;
* Always try to stop all configured VMs when service is stopped.
* Patch from Scholar Team and Harold Roussel: allow VBoxWebSrv.exe to run when VBoxVmService starts, giving access to the currently running virtual machines via phpVirtualBox.
* Calling VirtualBox COM API directly instead of using VBoxManage.exe. 
* Service now runs as normal user, with username and password configed in VBoxVmService.ini.

2011-07-21 Release 2.3 "Watermelon"

* Always require a reboot after installation;
* Reuse VRDP settings from VirtualBox Manager, and don't call modifyvm to change port anymore;
* Added an AutoStart option to control if a VM will be started automatically when VBoxVmService runs;
* Show full command line including path during log;
* Fixed a bug that meaningless chars are printed to log;
* Set service to delayed auto-start if possible.

2011-01-13 Release 2.2 "Fireworks"

* Update to make VBoxVmService work with VirtualBox 4.0. Note this is incompatible with old versions of VBox, so stay with "Reindeer" if you are still running VBox 3.X.X.

2010-12-24 Release 2.1 "Reindeer"

* PauseShutdown now became global setting. When service is stopped, it doesn't make sence to wait VM0 to shutdown, then VM1, then VM2, ..., etc. Now all the VMs will start shutting down at once, and all are expected to finish within time specified as PauseShutdown.
* Added too way communication between the service and control program. Show service output after control command get executed.